rgw: Disable logging for datalog and bilog if zone doesn't export data

Zones (such as archive zone) which do not export data should have
sync logging disabled.

Fixes# https://tracker.ceph.com/issues/59106

Signed-off-by: Soumya Koduri <skoduri@redhat.com>
(cherry picked from commit 85f0cb592aa0d755c101d2e2845ad736a7697e3e)